# CAVIS

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
cmake/: CAVISConfig.cmake.in
cmake/modules/: FindSFML.cmake
include/: agent.h  cavis.h  cellular_automaton.h  grid.h  pixels.h  window.h
source/: cavis.cpp  grid.cpp  pixels.cpp  window.cpp
src/: cavis.cpp  grid.cpp  pixels.cpp  window.cpp
tests/: langtons_ant.h  main.cpp  testable_ca.h
